Settings to dockerfile gradle